fix social media icons alignment and add google adsense script

--- a/style.css
+++ b/style.css
@@ -506,6 +506,7 @@ body {
 
 #fifth .details .social {
     margin: 20px auto;
+    text-align: center;
 }
 
 #fifth .details .social .fa {
